final test work

--- a/testpage.html
+++ b/testpage.html
@@ -278,40 +278,45 @@
             </ul>
 
             <div class="button-filter text-center">
-                <div class="btn-group">
+                <div class="btn-group button-selected-container">
                     <button class="btn dropdown-toggle" data-toggle="dropdown">Рейтинг</button>
+                    <button class="btn selectedFilters hidden"></button>
                     <button class="btn dropdown-toggle" data-toggle="dropdown">
                         <span class="caret"></span>
                     </button>
+                    <button class="btn closeFilters hidden"><span>&times;</span></button>
                     <ul class="dropdown-menu dropdown-menu-custom">
                             <li>
                                 <div class="checkbox checkbox-custom">
                                     <label>
-                                        <input type="checkbox" value="">
-                                        C отзывами
+                                        <input type="checkbox" value="C отзывами">
+                                        <span class="filter-value">C отзывами</span>
                                     </label>
                                 </div>
                             </li>
                             <li>
                                 <div class="checkbox checkbox-custom">
                                     <label>
-                                        <input type="checkbox" value="">
-                                        Оценка 3+
+                                        <input type="checkbox" value="Оценка 3+">
+                                        <span class="filter-value">Оценка 3+</span>
                                     </label>
+                                </div>
                             </li>
                             <li>
                                 <div class="checkbox checkbox-custom">
                                     <label>
-                                        <input type="checkbox" value="">
-                                        Оценка 4+
+                                        <input type="checkbox" value="Оценка 4+" />
+                                        <span class="filter-value">Оценка 4+</span>
                                     </label>
+                                </div>
                             </li>
                             <li>
                                 <div class="checkbox checkbox-custom">
                                     <label>
-                                        <input type="checkbox" value="">
-                                        Оценка 4.5+
+                                        <input type="checkbox" value="Оценка 4.5+">
+                                        <span class="filter-value">Оценка 4.5+</span>
                                     </label>
+                                </div>
                             </li>
                             <li class="divider"></li>
                             <li class="text-center">
@@ -324,51 +329,95 @@
                             </li>
                     </ul>
                 </div>                
-                <div class="btn-group">
+                <div class="btn-group button-selected-container">
                     <button class="btn">Специальность</button>
+                    <button class="btn selectedFilters hidden"></button>
                     <button class="btn dropdown-toggle" data-toggle="dropdown">
                         <span class="caret"></span>
                     </button>
+                    <button class="btn closeFilters hidden"><span>&times;</span></button>
+                    <ul class="dropdown-menu dropdown-menu-custom">
+                            <li>
+                                <div class="checkbox checkbox-custom">
+                                    <label>
+                                        <input type="checkbox" value="C отзывами">
+                                        <span class="filter-value">C отзывами</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="checkbox checkbox-custom">
+                                    <label>
+                                        <input type="checkbox" value="Оценка 3+">
+                                        <span class="filter-value">Оценка 3+</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="checkbox checkbox-custom">
+                                    <label>
+                                        <input type="checkbox" value="Оценка 4+">
+                                        <span class="filter-value">Оценка 4+</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="checkbox checkbox-custom">
+                                    <label>
+                                        <input type="checkbox" value="Оценка 4.5+">
+                                        <span class="filter-value">Оценка 4.5+</span>
+                                    </label>
+                                </div>
+                            </li>
+                            <li class="divider"></li>
+                            <li class="text-center">
+                                <div class="btn-group">
+                                    <button class="btn button-orange">Применить</button>
+                                </div>
+                                <div class="btn-group">
+                                    <button class="btn button-white">Отмена</button> 
+                                </div>                               
+                            </li>
+                    </ul>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group button-selected-container">
                     <button class="btn">Специализация</button>
                     <button class="btn dropdown-toggle" data-toggle="dropdown">
                         <span class="caret"></span>
                     </button>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group button-selected-container">
                     <button class="btn">Пол</button>
                     <button class="btn dropdown-toggle" data-toggle="dropdown">
                         <span class="caret"></span>
                     </button>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group button-selected-container">
                     <button class="btn">У специалиста</button>
                     <button class="btn dropdown-toggle" data-toggle="dropdown">
                         <span class="caret"></span>
                     </button>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group button-selected-container">
                     <button class="btn">Метро</button>
                     <button class="btn dropdown-toggle" data-toggle="dropdown">
                         <span class="caret"></span>
                     </button>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group button-selected-container">
                     <button class="btn">Район</button>
                     <button class="btn dropdown-toggle" data-toggle="dropdown">
                         <span class="caret"></span>
                     </button>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group button-selected-container">
                     <button class="btn">Сортировка</button>
                     <button class="btn dropdown-toggle" data-toggle="dropdown">
                         <span class="caret"></span>
                     </button>
                 </div>
             </div>
-            </div>
-        </div>
+
         <!--// Upper Block \\--> 
 
 		<!--// Main Content \\-->
